Fix: Update API Gateway Keycloak client secret